@@ -2,6 +2,8 @@ xx/xx/2004 autofs-4.1.?
 -----------------------
 - fix error in define of mtab lock file.
 - fix mischief caused by change in default strict -> nonstrict.
+- fix replicated server detection (TCP/UDP/NFSv2/NFSv3) logic
+  (Jeff Moyer and Ian Kent).
 
 19/05/2004 autofs-4.1.3
 -----------------------
